--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/lightbox/css/lightbox.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/lightbox/css/lightbox.css
@@ -1,5 +1,9 @@
-body.lb-disable-scrolling {
+html.lb-disable-scrolling {
   overflow: hidden;
+  /* Position fixed required for iOS. Just putting overflow: hidden; on the body is not enough. */
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
 }
 
 .lightboxOverlay {
