--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -3,7 +3,7 @@ a{color:#000; text-decoration:none;}
 body{min-width: 1024px;}
 #container{width:100%; margin: 0 auto;}
 #header{width:100%; background: #4f90cc; margin: 0 auto;}
-.margin{padding-top: 30px; padding-left: 300px;}
+.margin{padding-top: 20px; padding-left:300px;}
 #wrap-center{width: 1024px; margin: 0 auto;}
 #wrap-center > .navi ul{
     display: flex; 
@@ -12,10 +12,10 @@ body{min-width: 1024px;}
     align-items: center;
 }
 .navi > ul > li{ margin-right: 15%;}
-.left-section{float: left; width: 30%;}
+.left-section{float: left; width: 35%;}
 .take{width: 100%; font-size: 16px; background: green; border-radius: 3px; color: white; height: 40px; line-height: 40px;}
 .take > p{margin-left: 20px; font-weight: 700;}
-.top-table{margin-top: 10px; border: 1px solid skyblue; height: 500px;}
+.top-table{margin-top: 10px; border: 1px solid skyblue; height: 500px; overflow:auto; overflow-x:hidden; text-align:center;}
 .top-table > table > thead{background: skyblue;}
 .top-table table td{ border: 1px solid skyblue;}
 .top-table > table {width: 100%; table-layout: fixed; border-collapse: collapse;}
@@ -24,15 +24,19 @@ body{min-width: 1024px;}
 .total > table td {background: #ccc; border-radius: 2px; padding: 5px;}
 .crud-width{width: 100%;}
 .crud > li{display: inline-block; background:skyblue; float: left; margin-right: 9.7px; margin-top: 10px; border-radius: 2px; width: 17%; height: 40px; line-height: 40px; text-align: center;}
-.right-section{width:65%; float: right; text-align: center;}
+.right-section{width:61%; float: right; text-align: center;}
 .right-section > .right-table{width: 65%;}
-.right-section > .right-table > thead > tr>th{background:#eee6c4; line-height: 70px; border-radius: 5px; table-layout: fixed; width:90px;}
-.right-table-td > tr > td {line-height: 80px; border-radius: 5px; background: skyblue; table-layout:fixed; height:80px;}
+.right-table > th {border-right:1px solid;}
 footer > .pay ul li{display: inline-block; width: 17%; margin-top: 10px; margin-right:2px; text-align: center;height: 60px; background: yellow; line-height: 60px; border-radius: 5px;margin-bottom: 5px;}
 footer{clear: both; width: 30%;}
-.right-table-td>tr>td>p{font-size: 12px;}
 .none{display: none;}
-.pPrice{margin-top:-50px;}
+.pPrice{margin-top:-70px;}
+right-section{width:65%; float: right; text-align: center;}
+.right-section > .right-table { width: 55%; table-layout: fixed; border-collapse: collapse;background:#eee6c4; line-height: 30px; border-radius: 5px;}
+footer > .pay ul li{display: inline-block; width: 17%; margin-top: 10px; margin-right:2px; text-align: center;height: 70px; background: yellow; line-height: 70px; border-radius: 5px;margin-bottom: 5px;}
+footer{clear: both; width: 30%;}
+.ul {list-style-type: none; display: flex;  width: 65%;  flex-wrap: wrap;}
+.ul li{background: skyblue; width:20%; margin-right:10px; margin-top: 10px; height: 100px; line-height: 90px; border-radius: 5px; font-size: 13px;}
  h1{ 
          font-family: 'Oswald', sans-serif; 
          font-size: 30px; 
@@ -133,4 +137,4 @@ footer{clear: both; width: 30%;}
          transform: scale(1.0); 
          transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s; 
      } 
-    
+    .tr-none{display:none;}
