레이아웃 및 이미지 수정

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/fullcalendar-4.0.2/packages/core/main.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/fullcalendar-4.0.2/packages/core/main.css
@@ -729,7 +729,7 @@ Lots taken from Flatly (MIT): https://bootswatch.com/4/flatly/bootstrap.css
 --------------------------------------------------------------------------------------------------*/
 .fc-view-container {
   position: relative;
-  width:400px;
+/*   width:400px; */
   /* height:500px; */
    }
 
