--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -1,3 +1,16 @@
 @charset "UTF-8";
 
-img { width: 1900px; height: 400px;}
+*{margin:0; padding:0;}
+img {width:100%; height:400px;}
+.kategorie_div { border-style: solid; width:100%;}
+ul { line-height: 4em; }
+li { font-size: 20px; list-style:none; }
+a { text-decoration:none; color:#000000; }
+li:hover{color:#ff0000;}
+nav { min-width:1024px;}
+nav ul{ padding-top:10px; text-align:center; }
+nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dotum; padding: 0 50px; }
+nav ul li:first-child { border-left:none; }
+.order_div { height:1000px; border-style:solid; margin-top:50px; }
+.buger { width:300px; height:200px; float: left; margin-right:50px; }
+.center-wrap{ margin:0 auto; width:900px; height:100%; padding-top:80px; position:relative; left:200px; top:10px; }
