--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -1,16 +1,24 @@
 @charset "UTF-8";
 
+/* body {background-image:url("/resources/images/18_sw.jpg")} */
+body{background-image:url('/resources/kiosk/images/Hamburger_kiosk_first_screen.jpg');}
+
 *{margin:0; padding:0;}
 img {width:100%; height:400px;}
-.kategorie_div { border-style: solid; width:100%;}
+/* .kategorie_div { border:1px solid black; width:100%; } */
 ul { line-height: 4em; }
 li { font-size: 20px; list-style:none; }
 a { text-decoration:none; color:#000000; }
 li:hover{color:#ff0000;}
-nav { min-width:1024px;}
-nav ul{ padding-top:10px; text-align:center; }
-nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dotum; padding: 0 50px; }
+nav { width:1024px; background: yellow; margin:0 auto;}
+nav ul{ padding-top:10px; text-align:center; border:1px solid black;}
+nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dotum; padding: 0 40px; }
 nav ul li:first-child { border-left:none; }
-.order_div { height:1000px; border-style:solid; margin-top:50px; }
-.buger { width:300px; height:200px; float: left; margin-right:50px; }
-.center-wrap{ margin:0 auto; width:900px; height:100%; padding-top:80px; position:relative; left:200px; top:10px; }
+.order_div { height:770px; border:1px solid black; width:1024px; margin:0 auto;} 
+.buger { width:290px; height:200px; float: left; margin-right:50px; cursor: pointer; margin-top:15px;}
+.center-wrap{margin:0 auto;  width:1024px; height:100%; padding-top:80px;  top:10px;}
+.ListBtn { border: none; background: yellow; font-size:20pt; cursor: pointer;}
+.side_left { /* margin-bottom: -50px; */ }
+.image_out_div { margin-bottom: -5px; }
+.order_history_div { border:1px solid black; left:100px; clear:both; float:left; color:#fff;}
+.menu_list { position:relative; left:30px;}
