관리자 메뉴 등록 , timeModal 수정

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
@@ -67,25 +67,25 @@
 }
 
 .right-box>.burgerList {
-	display: none;
+	display:flex;
 	list-style-type: none;
 	flex-wrap: wrap;
 }
 
 .right-box>.chickenList {
-	display: none;
+	display:flex;
 	list-style-type: none;
 	flex-wrap: wrap;
 }
 
 .right-box>.sideMenuList {
-	display: none;
+	display:flex;
 	list-style-type: none;
 	flex-wrap: wrap;
 }
 
 .right-box>.drinkMenuList {
-	display: none;
+	display:flex;
 	list-style-type: none;
 	flex-wrap: wrap;
 }
