--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -14,6 +14,7 @@
     min-height: 100%;
     height: auto;
     padding: 0;
+    overflow:auto;
  /*    height:969px; */
 }
 *{ margin:0; padding:0; }
@@ -28,10 +29,20 @@ nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dot
 nav ul li:first-child { border-left:none; }
 .order_div { border:1px solid white; width:1024px; margin:0 auto;} 
 .buger { width:290px; height:200px; float: left; margin-right:50px; cursor: pointer; margin-top:15px;}
+.chicken { width:290px; height:200px; float: left; margin-right:50px; cursor: pointer; margin-top:15px;}
 .center-wrap{margin:0 auto;  width:1024px; height:100%; padding-top:80px; top:10px; }
 .ListBtn { border: none; background: yellow; font-size:20pt; cursor: pointer;}
 .image_out_div { margin-bottom: -5px; }
-.order_history_div { border:1px solid white; clear:both; position:relative; top:30px; color:#fff; width:1024px;}
-.menu_list { position:relative; left:30px; }
-.order_history_ul > li { display:inline-block; border-left:1px solid #999; font:bold 20px Dotum; padding: 10px 40px; }
-.order{height:300px;width:1024px;background: #000;}
+.order_history_div { clear:both; position:relative; top:60px; color:#fff; width:1024px;}
+.hamburger_list { position:relative; left:30px; }
+.chicken_list { position:relative; left:30px; }
+.order_history_p { font:bold 20px Dotum; position:relative; left:120px; line-height:10px;}
+.order_list_wrap{width:100%; clear: both; margin-top:30px; padding-bottom:29px;}
+.order_list_div{ float:left; width:65%; height:300px; background: #000; margin-top:30px; }
+.order_list_div > p{text-align:center; color:#fff; margin-top:10px;}
+.order_payment_div {width:35%; float:right; height: 300px; margin-top:30px;}
+.paymentBtn { width: 100%; height:40%; font-size:15pt; }
+.cancelBtn { width:100%; height:40%; font-size:15pt; }
+.total_table{ width:100%; background: #e3e3e3; height: 20%; }
+.total_table{ padding-left:30px; }
+.total_pay { padding: 5px 5px; }
