--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -6,7 +6,6 @@
     background-size: cover;
     background-position: center center;
     margin: 0;
-   /*  position: fixed; */
     min-width: 1024px;
     top: 0;
     left: 0;
@@ -15,10 +14,8 @@
     height: auto;
     padding: 0;
     overflow:auto;
- /*    height:969px; */
 }
 *{ margin:0; padding:0; }
-/* .kategorie_div { border:1px solid black; width:100%; } */
 ul { line-height: 4em; }
 li { font-size: 20px; list-style:none; }
 a { text-decoration:none; color:#000000; }
@@ -28,14 +25,14 @@ nav ul{ padding-top:10px; text-align:center; border:2px solid white;}
 nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dotum; padding: 0 40px; }
 nav ul li:first-child { border-left:none; }
 .order_div { border:1px solid white; width:1024px; margin:0 auto;} 
-.buger { width:290px; height:200px; float: left; margin-right:50px; cursor: pointer; margin-top:15px;}
-.chicken { width:290px; height:200px; float: left; margin-right:50px; cursor: pointer; margin-top:15px;}
+.tab_cont { position:relative; left:50px; }
+.tab_cont li { color:white; display:inline-block;}
+.tab_cont li img { width:240px; height:200px; margin-right:50px; cursor: pointer; margin-top:15px; position: relative; left: 50px; }
+.tab_cont li p {text-align: center; position:relative; left:50px; width:240px;}
 .center-wrap{margin:0 auto;  width:1024px; height:100%; padding-top:80px; top:10px; }
 .ListBtn { border: none; background: yellow; font-size:20pt; cursor: pointer;}
 .image_out_div { margin-bottom: -5px; }
 .order_history_div { clear:both; position:relative; top:60px; color:#fff; width:1024px;}
-.hamburger_list { position:relative; left:30px; }
-.chicken_list { position:relative; left:30px; }
 .order_history_p { font:bold 20px Dotum; position:relative; left:120px; line-height:10px;}
 .order_list_wrap{width:100%; clear: both; margin-top:30px; padding-bottom:29px;}
 .order_list_div{ float:left; width:65%; height:300px; background: #000; margin-top:30px; }
@@ -43,6 +40,6 @@ nav ul li:first-child { border-left:none; }
 .order_payment_div {width:35%; float:right; height: 300px; margin-top:30px;}
 .paymentBtn { width: 100%; height:40%; font-size:15pt; }
 .cancelBtn { width:100%; height:40%; font-size:15pt; }
-.total_table{ width:100%; background: #e3e3e3; height: 20%; }
-.total_table{ padding-left:30px; }
+.total_table{ width:100%; background: #e3e3e3; height: 20%; padding-left:30px;}
 .total_pay { padding: 5px 5px; }
+.menu_p {}
