--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .body_image {
-	background-image:url('/resources/kiosk/images/Hamburger_kiosk_first_screen.jpg');
+    background-image:url('/resources/kiosk/images/background.jpg'); 
 	background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -15,30 +15,165 @@
     padding: 0;
     overflow:auto;
 } 
+.background-image{ background-image: url(/resources/kiosk/images/back.jpg);}
 *{ margin:0; padding:0; }
 ul { line-height: 4em; }
 li { font-size: 20px; list-style:none; }
 a { text-decoration:none; color:#000000; }
-nav ul li:hover{ color:#ff0000; }
-nav { width:1024px; background: yellow; margin:0 auto;}
-nav ul{ padding-top:10px; text-align:center; border:2px solid white;}
-nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dotum; padding: 0 40px; }
+nav ul li button:hover{ color:#ff0000;}
+nav { width:1024px; margin:0 auto;}
+nav ul{ padding-top:10px; text-align:center; }
+nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dotum; font-weight:700; padding: 0 40px; }
 nav ul li:first-child { border-left:none; }
 .order_div { border:1px solid white; width:1024px; margin:0 auto;} 
-.tab_cont { position:relative; left:50px; }
+.tab_cont { position:relative; left:50px; top:20px; bottom:20px;}
 .tab_cont li { color:white; display:inline-block;}
-.tab_cont li img { width:240px; height:200px; margin-right:50px; cursor: pointer; margin-top:15px; position: relative; left: 50px; }
-.tab_cont li p {text-align: center; position:relative; left:50px; width:240px;}
-.center-wrap{margin:0 auto;  width:1024px; height:100%; padding-top:80px; top:10px; }
-.ListBtn { border: none; background: yellow; font-size:20pt; cursor: pointer;}
+.tab_cont li img { width:240px; height:200px; margin-right:50px; cursor: pointer; margin-top:15px; border:1px solid #e3e3e3; position: relative; left: 50px; }
+.tab_cont li p {text-align: center; position:relative; left:50px; width:240px; color:#3f3f3f; top:-23px;}
+.center-wrap{margin:0 auto;  width:1024px; height:100%; padding-top:40px; background-color: #fff;}
+.ListBtn { border: none; font-size:16px; background:transparent; cursor: pointer; color:rgb(133,42,42);}
 .image_out_div { margin-bottom: -5px; }
 .order_history_div { clear:both; position:relative; top:60px; color:#fff; width:1024px;}
 .order_history_p { font:bold 20px Dotum; position:relative; left:120px; line-height:10px;}
-.order_list_wrap{width:100%; clear: both; margin-top:30px; padding-bottom:29px;}
-.order_list_div{ float:left; width:65%; height:300px; background: #000; margin-top:30px; }
+.order_list_wrap{width:1024px; height:300px; clear: both;  background-color: #fbceb1;}
+.order_list_div{ float:left; width:60%; height:200px; background: #fff; margin-top:50px;  margin-left:35px;}
 .order_list_div > p{text-align:center; color:#fff; margin-top:10px;}
-.order_payment_div {width:35%; float:right; height: 300px; margin-top:30px;}
+.order_payment_div {width:33%; float:right; height: 200px; margin-top:50px; margin-right:15px;}
 .paymentBtn { width: 100%; height:40%; font-size:15pt; }
 .cancelBtn { width:100%; height:40%; font-size:15pt; }
-.total_table{ width:100%; background: #e3e3e3; height: 20%; padding-left:30px;}
+.total_table{ width:100%; height: 20%; padding-left:30px;}
 .total_pay { padding: 5px 5px; }
+.title-span{color:#ffa940;}
+.center-wrap h2{color:rgb(133,42,42); text-align: center;}
+
+.ListBtn::before {
+      cursor: pointer;
+    content: '';
+    display: block;
+    width: 55px;
+    height: 40px;
+    /* background: url(/resources/images/search.png); */
+    background-size: 28px 22px;
+    background-position: 19px;
+    background-repeat: no-repeat;
+}
+.btn1::before{
+	 background: url(/resources/kiosk/images/star.png);
+	  background-size: 28px 22px;
+    background-position: 19px;
+    background-repeat: no-repeat;
+}
+.btn2::before{
+	 background: url(/resources/kiosk/images/chicken.png);
+	  background-size: 28px 22px;
+    background-position: 19px;
+    background-repeat: no-repeat;
+}
+.btn3::before{
+	 background: url(/resources/kiosk/images/ham.png);
+	  background-size: 28px 22px;
+    background-position: 19px;
+    background-repeat: no-repeat;
+}
+.btn4::before{
+	 background: url(/resources/kiosk/images/side.png);
+	  background-size: 28px 22px;
+    background-position: 19px;
+    background-repeat: no-repeat;
+}
+.btn5::before{
+	 background: url(/resources/kiosk/images/drink.png);
+ background-size: 28px 22px;
+    background-position: 12px;
+    background-repeat: no-repeat;
+}
+
+.back{display:inline-block;}
+
+
+.button_base {
+    margin: 0;
+    border: 0;
+    font-size: 18px;
+    position: relative;
+    /* top: 50%; */
+  /*   left: 20%; */
+/*     margin-top: -25px; */
+  /*   margin-left: -100px; */
+    top:95px;
+    width: 160px;
+    height: 50px;
+    text-align: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-user-select: none;
+    cursor: default;
+    display: inline-block;
+}
+
+
+.button_base:hover {
+    cursor: pointer;
+}
+
+
+/* ### ### ### 03 */
+.b03_skewed_slide_in {
+    overflow: hidden;
+    border: #ff6e40 solid 1px;
+}
+
+.b03_skewed_slide_in div {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    padding: 10px;
+}
+
+.b03_skewed_slide_in div:nth-child(1) {
+    color: #ff6e40;
+    background-color: #ffffff;
+}
+
+.b03_skewed_slide_in div:nth-child(2) {
+    background-color: #ff6e40;
+    width: 230px;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    transform: translate(-250px, 0px) skewX(-30deg);
+    -webkit-transform: translate(-250px, 0px) skewX(-30deg);
+    -moz-transform: translate(-250px, 0px) skewX(-30deg);
+}
+
+.b03_skewed_slide_in div:nth-child(3) {
+    color: #ffffff;
+    left: -200px;
+    transition: left 0.2s ease;
+    -webkit-transition: left 0.2s ease;
+    -moz-transition: left 0.2s ease;
+}
+
+.b03_skewed_slide_in:hover div:nth-child(2) {
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    transform: translate(-15px, 0px) skewX(-30deg);
+    -webkit-transform: translate(-15px, 0px) skewX(-30deg);
+    -moz-transform: translate(-15px, 0px) skewX(-30deg);
+}
+
+.b03_skewed_slide_in:hover div:nth-child(3) {
+    left: 0px;
+    transition: left 0.30000000000000004s ease;
+    -webkit-transition: left 0.30000000000000004s ease;
+    -moz-transition: left 0.30000000000000004s ease;
+}
+
+
+
