Kiosk 주문내역 Jquery 추가, jsp 수정

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -175,5 +175,5 @@ nav ul li:first-child { border-left:none; }
     -moz-transition: left 0.30000000000000004s ease;
 }
 
-
-
+.table_list { width: 100%; }
+.table_tr2 { width: 100%; }
