--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -35,9 +35,13 @@ nav ul li:first-child { border-left:none; }
 .image_out_div { margin-bottom: -5px; }
 .order_history_div { clear:both; position:relative; top:60px; color:#fff; width:1024px;}
 .order_history_p { font:bold 20px Dotum; position:relative; left:120px; line-height:10px;}
-.order_list_wrap{width:1024px; height:300px; clear: both;  background-color: #fbceb1;}
-.order_list_div{ float:left; width:60%; height:200px; background: #fff; margin-top:50px;  margin-left:35px;}
-.order_list_div > p{text-align:center; color:#fff; margin-top:10px;}
+.order_list_wrap{width:1024px; height:300px; clear: both;  background-color: #fbceb1; padding-top: 20px;}
+.order_list_div{ float:left; width:60%; height:200px; background: #fff; margin-top:50px; overflow-y:scroll; margin-left:35px;}
+/* .order_list_div > p{text-align:center; color:#fff; margin-top:10px; margin-bottom:10px;} */
+.p{    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    color: #333333;}
 .order_payment_div {width:33%; float:right; height: 200px; margin-top:50px; margin-right:15px;}
 .paymentBtn { width: 100%; height:40%; font-size:15pt; }
 .cancelBtn { width:100%; height:40%; font-size:15pt; }
@@ -175,5 +179,8 @@ nav ul li:first-child { border-left:none; }
     -moz-transition: left 0.30000000000000004s ease;
 }
 
-.table_list { width: 100%; }
-.table_tr2 { width: 100%; }
+.table_list { width: 100%; text-align: center; border:1px solid #ff6e40; border-collapse: collapse;}
+.table_list thead{text-align: center; }
+.table_list thead tr th{width:120px; border:1px solid #ff6e40; border-collapse: collapse; padding:5px;}
+.table_list tbody th{border:1px solid #ff6e40; border-collapse: collapse; width:120px; padding:5px;}
+.table_tr2 { width: 100%; text-align: center;}
