--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -18,6 +18,9 @@
     justify-content: flex-start !important;
 }
 }
+
+textarea{resize: none;}
+
 .navbar-expand-sm{justify-content:flex-start;}
 .navbar {
     position: relative;
@@ -214,7 +217,7 @@ footer{clear: both; width: 30%;}
          background-color: white; 
          padding: 1rem 1.5rem; 
          width: 500px; 
-         height: 350px; 
+         /* height: 350px;  */
          border-radius: 0.5rem; 
      } 
      .close-button { 
@@ -359,3 +362,126 @@ footer{clear: both; width: 30%;}
          height: 350px; 
          border-radius: 0.5rem; 
      } 
+     
+     div#select_box {
+  position: relative;
+  width: 200px;
+  height: 32px;
+  background: url(http://cfile1.uf.tistory.com/image/27423E43565F8EF627B215) 0 center no-repeat;
+  /* 화살표 이미지 */
+  float:right;
+  bottom: 10px;
+  right: 40px;
+}
+
+div#select_box label {
+  position: absolute;
+  font-size: 14px;
+  color: #fff;
+  top: -13px;
+  left: 12px;
+  letter-spacing: 1px;
+}
+
+div#select_box select#menuselect {
+  width: 100%;
+  height: 32px;
+  min-height: 32px;
+  line-height: 32px;
+  padding: 0 10px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  /* IE 8 */
+}
+     /* upload */
+.where {
+  display: block;
+  margin: 25px 15px;
+  font-size: 11px;
+  color: #000;
+  text-decoration: none;
+  font-family: verdana;
+  font-style: italic;
+} 
+
+.filebox input[type="file"] {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip:rect(0,0,0,0);
+	border: 0;
+}
+
+.filebox label {
+	display: inline-block;
+	padding: .5em .75em;
+	color: #999;
+	font-size: inherit;
+	line-height: normal;
+/* 	vertical-align: middle; */
+	background-color: #fdfdfd;
+	cursor: pointer;
+	border: 1px solid #ebebeb;
+	border-bottom-color: #e2e2e2;
+	border-radius: .25em;
+}
+
+/* named upload */
+.filebox .upload-name {
+	display: inline-block;
+	padding: .5em .75em;
+	font-size: inherit;
+	font-family: inherit;
+	line-height: normal;
+	vertical-align: middle;
+	background-color: #f5f5f5;
+  border: 1px solid #ebebeb;
+  border-bottom-color: #e2e2e2;
+  border-radius: .25em;
+  -webkit-appearance: none; /* 네이티브 외형 감추기 */
+  -moz-appearance: none;
+  appearance: none;
+}
+
+/* imaged preview */
+.filebox .upload-display {
+	margin-bottom: 5px;
+}
+
+@media(min-width: 768px) {
+	.filebox .upload-display {
+		display: inline-block;
+		margin-right: 5px;
+		margin-bottom: 0;
+	}
+}
+
+.filebox .upload-thumb-wrap {
+	display: inline-block;
+	width: 54px;
+	padding: 2px;
+	vertical-align: middle;
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	background-color: #fff;
+}
+
+.filebox .upload-display img {
+	display: block;
+	max-width: 100%;
+	width: 100% \9;
+	height: auto;
+}
+
+.filebox.bs3-primary label {
+  color: #fff;
+  background-color: #337ab7;
+	border-color: #2e6da4;
+}
+     
+     
+     
+     
