--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
@@ -44,6 +44,8 @@ ul li{list-style-type: none;}
 	/*    flex-direction: column; */
 	flex-direction: column;
 	align-items: stretch;
+	
+	margin-top:30px;
 	/*    min-height: 360px; */
 	min-height: 620px;
 	max-height: 620px;
@@ -54,6 +56,9 @@ ul li{list-style-type: none;}
 	vertical-align: middle;
 	padding: 15px 10px;
 	box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0, 12);
+	position:relative;
+	left:150px;
+
 }
 
 .right-box {
@@ -66,6 +71,8 @@ ul li{list-style-type: none;}
 .left-box {
 	height: 620px;
 	overflow-y: auto;
+	position:relative;
+	left:150px;
 }
 
 .right-box>ul {
