--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
@@ -184,6 +184,54 @@ ul li{list-style-type: none;}
 	position: relative;
 	left: 30px;
 }
+.setList>li>img {
+	width: 120px;
+	height: 100px;
+	cursor:pointer;
+}
+
+.setList>li {
+	width: 120px;
+	margin-right: 30px;
+	font-size: 17px;
+}
+
+.setList>li:nth-child(even) {
+	position: relative;
+	left: 30px;
+}
+.setSideList>li>img {
+	width: 120px;
+	height: 100px;
+	cursor:pointer;
+}
+
+.setSideList>li {
+	width: 120px;
+	margin-right: 30px;
+	font-size: 17px;
+}
+
+.setSideList>li:nth-child(even) {
+	position: relative;
+	left: 30px;
+}
+.setDrinkList>li>img {
+	width: 120px;
+	height: 100px;
+	cursor:pointer;
+}
+
+.setDrinkList>li {
+	width: 120px;
+	margin-right: 30px;
+	font-size: 17px;
+}
+
+.setDrinkList>li:nth-child(even) {
+	position: relative;
+	left: 30px;
+}
 #orderList > ul{
 	position:relative;
 	left:-30px;
