모달창 퍼블리싱

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -504,7 +504,35 @@ div#select_box select#menuselect {
   background-color: #337ab7;
 	border-color: #2e6da4;
 }
-     
-     
-     
-     
+
+
+
+div#select_box {
+  position: relative;
+  width: 200px;
+  height: 32px;
+  background: url(http://cfile1.uf.tistory.com/image/27423E43565F8EF627B215) 0 center no-repeat;
+  /* 화살표 이미지 */
+}
+
+div#select_box label {
+  position: absolute;
+  font-size: 14px;
+  color: #fff;
+  top: -14px;
+  left: 12px;
+  letter-spacing: 1px;
+}
+
+div#select_box select#menuCategory {
+  width: 100%;
+  height: 32px;
+  min-height: 32px;
+  line-height: 32px;
+  padding: 0 10px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  /* IE 8 */
+}
+
+
