1. 포스기 현금결제, 카드결제 유효성 검사 2. 카드결제 시 주문내역 값 넣기 3. 테이크아웃 오전,오후 버튼 추가 및 버튼 누를때마다 시간 바뀌도록 설정 4. 세트메뉴 alert 창 수정 및 유효성 수정 5. 주문 버튼 눌렀을 시 상품 존재하는지 유효성 검사 6. 테이크아웃 리셋 버튼 추가

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/seatAppointment.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/seatAppointment.css
@@ -348,6 +348,24 @@ background:#1AAB8A;
 	position: relative;
 	background-color:#74a3b0;
 }
+/* Button two - I have no creativity for names */
+.btn-three {
+	color: white;	
+	padding: 15px 25px;
+	display: inline-block;
+	border: 1px solid rgba(0,0,0,0.21);
+	border-bottom-color: rgba(0,0,0,0.34);
+	text-shadow:0 1px 0 rgba(0,0,0,0.15);
+	box-shadow: 0px 4px #848484;
+	background-color:#A4A4A4;
+}
+.btn-three:active {
+	top: 1px;
+	border-color: rgba(0,0,0,0.34) rgba(0,0,0,0.21) rgba(0,0,0,0.21);
+	box-shadow: box-shadow: 0px 4px #A4A4A4;
+	position: relative;
+	background-color:#74a3b0;
+}
 /* .btn.green {box-shadow: 0px 4px 0px #87a86f;}
 .btn.green:active {box-shadow: 0 0 #87a86f; background-color: #87a86f;} */
 
@@ -357,3 +375,10 @@ background:#1AAB8A;
          transform: scale(1.0); 
          transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s; 
      } 
+     
+    .timeWrapper{
+    position : relative ;
+    left : 66px; 
+    bottom : 25px;
+    }
+
